--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,6 +7,7 @@
     <ImageView
         android:id="@+id/iv_display"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:scaleType="matrix"/>
 
 </LinearLayout>
