--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,18 +1,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- android:icon="@drawable/ic_action_refresh" -->
     <item android:id="@+id/menu_picture"
         android:title="Picture"
-        android:icon="@drawable/ic_action_refresh"
         android:orderInCategory="0"
-        android:showAsAction="always" />
+        android:showAsAction="ifRoom|withText" />
+     <!-- android:icon="@drawable/ic_action_search"-->
     <item android:id="@+id/menu_settings"
         android:title="Settings"
-        android:icon="@drawable/ic_action_search"
         android:orderInCategory="1"
-        android:showAsAction="always" />
+        android:showAsAction="ifRoom|withText" />
 
+	<!--android:icon="@drawable/ic_menu_share"-->
     <item android:id="@+id/menu_help"
-        android:title="help"
-        android:icon="@drawable/ic_menu_share"
+        android:title="Help"
         android:orderInCategory="2"
-        android:showAsAction="never" />
+        android:showAsAction="ifRoom|withText" />
 </menu>
